# rfsn_v10_corrected_full

./: .!22262!TICKETS.md  .dockerignore  .env.example  .gitignore  API.md  DEPLOYMENT.md  Dockerfile  Dockerfile.server  MAIN26_TECHNICAL_REPORT.md  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASE_MANIFEST.md  REPAIR_NOTES.md  TICKETS.md  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_agent_core_integration.py  test_syntax.py
.claude/: ecc-tools.json  identity.json
.claude/commands/: release-artifact-generation-and-proof-consistency.md
.codex/: AGENTS.md
.github/workflows/: ci.yml  cross-platform.yml  production-validation.yml  proof-regression.yml  refresh-proof-baseline.yml
.kilo/plans/: 1780268892845-brave-garden.md
.tickets/: 3-2-poetry-migration.md  4-1-clickhouse-tls.md  4-2-prompt-hashing.md  4-3-retry-queue.md  4-4-alembic-migrations.md  7-1-agent-core-rename.md  7-2-strict-config-validation.md  README.md  TEMPLATE.md  dashboard.py  import_to_github.py
.trunk/: trunk.yaml
agent_core/: finalizer.py  judge.py  orchestrator.py  patch_manager.py  schemas.py  tool_runner.py
artifacts/proof/: main17_release_manifest.json  main21_release_manifest.json  main22_release_manifest.json
artifacts/runtime_logs/: audit.jsonl
benchmarks/: benchmark_attention.py  benchmark_bitpack.py  benchmark_end_to_end.py  benchmark_experimental_throughput.py  benchmark_fused_kernel.py  benchmark_generation_throughput.py  benchmark_kernel_paths.py  benchmark_kv_cache.py  benchmark_optimizations.py  benchmark_partial_dequant.py  benchmark_profiling.py  benchmark_real_generation_throughput.py  benchmark_retrieve_blocks.py  benchmark_sparse_improvements.py  benchmark_teacher_forced_step_trace.py  cache_memory_analyzer.py  check_regression.py  debug_decode_update_path.py  debug_prefill_decode_split.py  debug_short_prompt_drift.py  per_layer_sensitivity.py  production_baseline.json  profile_quantization_overhead.py  run_all.py  run_deterministic.py  validate_experimental_quant.py  validate_generation_quality.py  validate_generation_smoke.py  validate_kv_roundtrip_by_context.py  validate_long_context_kv.py  validate_production_model.py  validate_qjl_attention_score.py  validate_real_model_kv.py
benchmarks/results/: baseline.json  run_all_20260607T190259Z.json  run_all_20260607T190315Z.json  run_all_20260607T190327Z.json  run_all_20260607T190330Z.json  run_all_20260607T190507Z.json  run_all_20260607T190519Z.json  run_all_20260607T192634Z.json  run_all_20260607T192715Z.json  run_all_20260607T192737Z.json  run_all_20260607T215244Z.json  run_all_20260607T215459Z.json  run_all_20260607T215536Z.json  run_all_20260607T215547Z.json
configs/: default_runtime.yaml
docs/: limitations.md
experimental/: partial_dequant.py
experimental/disabled/: README.md  benchmark_partial_dequant.py
prompts/: validation_suite.json
release_tmp/rfsn_v10_corrected_full-main/: MANIFEST.in
results/plots/: custom_kernel_alpha_pending_benchmark.txt  kernel_reference_vs_custom.txt  kernel_reference_vs_metal.txt  kv_latency.txt
rfsn_v10/: __init__.py  __main__.py  _version.py  adaptive_batch.py  adaptive_sparsity.py  async_writer.py  attention.py  attention_improved.py  attention_reference.py  bitpack.py  cli.py  clickhouse_client.py  config.py  disk_persistence.py  errors.py  fused_kernel_plan.md  health.py  isoquant_precondition.py  kernels.py  kv_manager.py  logging.py  memory_guard.py  memory_manager.py  metrics.py  model_cache_policy.py  model_loader.py  multi_model.py  platform.py  profiler.py  runtime.py
rfsn_v10.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rfsn_v10/kernels/: __init__.py  _common.py  _cuda_backend.py  _metal_backend.py  _numpy_backend.py
rfsn_v10/quantization/: __init__.py  block_unpack.py  fused_isoquant_polar.py  grouped_cartesian.py  hybrid_polar_cartesian.py  isoquant_precondition.py  kv_quant_manager.py  layer_policy.py  polar_quant.py  qjl_score_correction.py  turbo_polar_kv_manager.py  turbo_polar_quant.py
rfsn_v10/runtime/: __init__.py  adaptive_controller.py  audit.py  cache_debug.py  engine.py  generation.py  (+2 more)
scripts/: check_production_regression.py  check_proof_regression.py  check_proof_summary_consistency.py  check_release_integrity.py  check_teacher_forced_consistency.py  classify_experimental_configs.py  compare_proof_runs.py  generate_bench_report.py  generate_experimental_comparison.py  generate_layer_policy.py  generate_plots.py  generate_proof_artifacts.py  generate_proof_summary.py  generate_summary.py  migrate_clickhouse.py  package_release.py  proof_regression_thresholds.json  release_gate.py  run_benchmarks.sh  run_proof_artifacts.sh  run_proof_regression_gate.sh  run_tests.sh
tests/: conftest.py  test_adaptive_batch.py  test_adaptive_controller.py  test_adaptive_sparsity_split_metrics.py  test_async_writer_retry.py  test_attention.py  test_attention_causal_mask.py  test_attention_reserved_blocks_mlx.py  test_attention_validation.py  test_audit.py  test_bitpack.py  test_bitpack_fuzz.py  test_block_unpack.py  test_clickhouse_client.py  test_clickhouse_security.py  test_compat.py  test_config.py  test_config_strict.py  test_decode_update_trace_artifact.py  test_disk_persistence.py  test_docker_compose_integration.py  test_drift.py  test_errors.py  test_experimental_bitpacking.py  test_experimental_flags.py  test_experimental_quant_math.py  test_experimental_quant_runtime.py  test_fused_kernel_mlx.py  test_generation.py  test_grouped_cartesian.py  test_health.py  test_integration_7b_synthetic.py  test_invalid_symmetric_codes_mlx.py  test_kernel_equivalence_mlx.py  test_kernels_validation.py  test_kv_manager.py  test_layer_policy.py  test_log_parser_json.py  test_logging.py  test_long_context.py  (+31 more)
tools/: __init__.py  log_parser.py  model_download.py  patch_manager.py  proof_regression.py  repo_extractor.py  test_runner.py
(+287 files in other folders)
