[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfsn-v10"
version = "0.1.0"
description = "RFSN v10 - Quantized KV-cache + decode-time sparse-attention runtime for MLX/Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.31",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["rfsn_v10", "agent_core", "tools"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
