[build-system]
requires = ["setuptools>=70.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rfsn-v10"
dynamic = ["version"]
description = "RFSN v10 - Quantized KV-cache + decode-time sparse-attention runtime for MLX/Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "RFSN Contributors"},
]
keywords = [
    "quantization",
    "kv-cache",
    "sparse-attention",
    "mlx",
    "apple-silicon",
    "llm",
    "inference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==1.26.4",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pydantic>=2.5",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
mlx = [
    "mlx==0.21.1",
    "mlx-lm>=0.19",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.4.*",
    "mypy==1.8.*",
]
real_model = [
    "torch==2.3.1",
    "transformers>=4.38",
]
production = [
    "huggingface_hub>=0.20",
    "psutil>=5.9",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "rfsn-v10[mlx,dev,real_model,production]",
]

[project.urls]
Homepage = "https://github.com/yourusername/rfsn_v10"
Documentation = "https://github.com/yourusername/rfsn_v10#readme"
Repository = "https://github.com/yourusername/rfsn_v10"
Issues = "https://github.com/yourusername/rfsn_v10/issues"

[project.scripts]
rfsn-benchmark = "rfsn_v10.cli:main"

[tool.setuptools.packages.find]
include = ["rfsn_v10*", "agent_core*", "tools*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "*.so", "*.dylib"]

[tool.setuptools_scm]
write_to = "rfsn_v10/_version.py"
version_scheme = "release-branch-semver"
fallback_version = "10.1.0.dev0"

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning:mlx",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"rfsn_v10/runtime/__init__.py" = ["E402"]

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
